<resources>
    <string name="app_name">InnocentMinds</string>
    <string name="nurse">Nurse</string>
    <string name="teacher">Teacher</string>
    <string name="edit_my_profile">Edit my profile</string>
    <string name="add_a_child">+ Add a child</string>
    <string name="edit_child_profile">Edit child profile</string>
    <string name="change_password">Change my password</string>
    <string name="see_some_images">Gallery</string>
    <string name="payments_fees">Payments and fees</string>
    <string name="about_us">Abouts us</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="hello_there">Hello There</string>
    <string name="what_to_do">What would you like to do?</string>
    <string name="select_language">Select your language</string>
    <string name="hello">Hello</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save_password">Save password</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="overview">Overview</string>
    <string name="directors_note">Directores note</string>
    <string name="our_mission">Our Mission</string>
    <string name="our_staff">Our Staff</string>
    <string name="username_empty_error">Username field cannot be empty</string>
    <string name="password_empty_error">Password field cannot be empty</string>
    <string name="firstname_empty_error">Firstname field cannot be empty</string>
    <string name="lastname_empty_error">Lastname field cannot be empty</string>
    <string name="email_empty_error">Email field cannot be empty</string>
    <string name="phone_empty_error">Phone number field cannot be empty</string>
    <string name="branch_empty_error">Branch field cannot be empty</string>
    <string name="inquiry_empty_error">Inquiry field cannot be empty</string>
    <string name="an_error_occured">An error has occured, please try again or contact support</string>
    <string name="message_sent_successfully">Your message has been sent successfully</string>
    <string name="password_changed_successfully">Your password has been changed successfully</string>
    <string name="payments_and_fees">Payments &amp; fees</string>
    <string name="payments">Payments</string>
    <string name="fees">Fees</string>
    <string name="paymentdate">Payment date</string>
    <string name="duedate">Due date</string>
    <string name="paymentamount">Payment amount</string>
    <string name="feeamount">Fee amount</string>
    <string name="calendar">Calendar</string>
    <string name="week">Week</string>
    <string name="no_food_available">No available food yet for this week</string>
    <string name="no_events_available">No available events yet for this week</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="personal_information">Personal Information</string>
    <string name="firstname">First name</string>
    <string name="father_name">Father\'s name</string>
    <string name="lastname">Last name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="place_of_birth">Place of birth</string>
    <string name="home_language">Home Language</string>
    <string name="fullname">Full name</string>
    <string name="workplace">Workplace</string>
    <string name="business_phone_number">Business phone number</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="pediatrician">Pediatrician</string>
    <string name="medical_info">Medical Info</string>
    <string name="blood_type">Blood type</string>
    <string name="allergy">Allergy</string>
    <string name="if_yes_specify">If yes specify</string>
    <string name="regular_medication">Regular Medication</string>
    <string name="disease">Disease</string>
    <string name="special_medication">Special Medication conditions</string>
    <string name="confirm">Confirm</string>
    <string name="habits">Habits</string>
    <string name="sleep_habit">Sleep Habit</string>
    <string name="eating_habit">Eating habit</string>
    <string name="clean">Clean</string>
    <string name="character">Character</string>
    <string name="finish">Finish</string>
    <string name="are_you_sure_logout">Are you sure you want to logout?</string>
    <string name="program_language">Program language</string>
    <string name="transportation">Transportation</string>
    <string name="change_image">Change image</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="signin">Sign in</string>
    <string name="oops_forgot_password">Oops! I forgot my password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="Branch">Branch</string>
    <string name="phone_number">Phone number</string>
    <string name="Inquiry">inquiry</string>
    <string name="send_message">Send message</string>
    <string name="return_main_menu">Are you sure you want to return to main menu?</string>
    <string name="are_you_sure_cancel_registration">Are you sure you want to cancel your registration?</string>
    <string name="events">Events</string>
    <string name="dashboard">Dashboard</string>
    <string name="viewing">Viewing</string>
    <string name="change_child">Change child</string>
    <string name="register_child">Register child</string>
    <string name="child_first_name">Child\'s first name</string>
    <string name="child_last_name">Child\'s last name</string>
    <string name="child_dob">Child\'s date of birth</string>
    <string name="not_born_yet">Not born yet</string>
    <string name="i_am">I am</string>
    <string name="mother">Mother</string>
    <string name="father">Father</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="desired_date">Desired date</string>
    <string name="request_appointment">Request appointment</string>
    <string name="our_tem_contact_you">Our team will shortly contact you to schedule an appointment.</string>
    <string name="thankyou">Thank you</string>
    <string name="date_field_empty_error">Date of birth field cannot be empty</string>
    <string name="name_empty_error">Name field cannot be empty</string>
    <string name="address_empty_error">Address field cannot be empty</string>
    <string name="specify_relation">Please specify your relation to your child</string>
    <string name="hear_about_us_error">Hear about us field cannot be empty</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="one_minute">1 minute</string>
    <string name="no_activities">There are no activites yet for</string>
</resources>
