<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/edit_profile_background" />

    <TextView
        android:id="@+id/lblPediatrician"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin"
        android:text="@string/pediatrician"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/xlarge_text" />

        <LinearLayout
            android:id="@+id/step1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginBottom="100dp"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/txtFullName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/app_margin"
                android:layout_marginRight="@dimen/app_margin"
                android:layout_marginTop="@dimen/app_margin"
                android:background="@drawable/border_white_transparent_button"
                android:gravity="center"
                android:hint="@string/fullname"
                android:lines="1"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/txtWorkplace"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/app_margin"
                android:layout_marginRight="@dimen/app_margin"
                android:layout_marginTop="@dimen/app_margin"
                android:background="@drawable/border_white_transparent_button"
                android:gravity="center"
                android:hint="@string/workplace"
                android:lines="1"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/app_margin"
                android:layout_marginRight="@dimen/app_margin"
                android:layout_marginTop="@dimen/app_margin"
                android:background="@drawable/border_white_transparent_button"
                android:gravity="center"
                android:hint="@string/business_phone_number"
                android:lines="1"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:padding="10dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/app_margin"
                android:layout_marginRight="@dimen/app_margin"
                android:layout_marginTop="@dimen/app_margin"
                android:lines="1"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:background="@drawable/border_white_transparent_button"
                android:gravity="center"
                android:hint="Email"
                android:padding="10dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>

        </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_above="@+id/btnCancel"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/app_margin"
        android:background="@drawable/border_white_rec"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/red" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_above="@+id/btnCancel"
        android:layout_marginLeft="@dimen/app_margin"
        android:background="@android:color/transparent"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>