<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/change_password_background"
        android:scaleType="centerCrop"
        />

    <ImageView
        android:id="@+id/imgLock"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/lock_icon"
        android:scaleType="centerCrop"
        android:padding="15dp"
        />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/imgLock"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:textSize="@dimen/xxlarge_text"
        android:text="@string/change_password"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/txtPassword"
        android:layout_marginTop="20dp"
        android:gravity="center|top"
        >

        <EditText
            android:id="@+id/txtOldPassword"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:textCursorDrawable="@color/white"
            android:lines="1"
            android:textColor="@color/white"
            android:background="@drawable/textfield_border_top"
            android:hint="@string/old_password"
            android:gravity="center"
            android:textSize="@dimen/medium_text2"
            android:textColorHint="@color/white"
            />

        <EditText
            android:id="@+id/txtNewPassword"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="-1dp"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:textCursorDrawable="@color/white"
            android:lines="1"
            android:textColor="@color/white"
            android:background="@drawable/textfield_border_white"
            android:hint="@string/new_password"
            android:gravity="center"
            android:textSize="@dimen/medium_text2"
            android:textColorHint="@color/white"
            />


        <EditText
            android:id="@+id/txtRePassword"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="-1dp"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:lines="1"
            android:textColor="@color/white"
            android:textCursorDrawable="@color/white"
            android:background="@drawable/textfield_border_bot"
            android:hint="@string/confirm_password"
            android:gravity="center"
            android:textSize="@dimen/medium_text2"
            android:textColorHint="@color/white"
            />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/large_text"
            android:background="@drawable/border_white_rec"
            android:textColor="@color/yellowDialogue"
            android:textSize="@dimen/medium_text2"
            android:text="@string/save_password"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text2"
        android:text="@string/cancel"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        />

    <apploads.com.innocentminds.helpers.LoadingIndicator
        android:id="@+id/indicatorView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackOpacity"
        android:visibility="invisible">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/indicator"
            android:layout_width="100dp"
            android:layout_height="100dp"
            style="@style/AVLoadingIndicatorView"
            app:indicatorName="BallScaleIndicator"
            app:indicatorColor="@color/white"
            android:layout_centerInParent="true"/>

    </apploads.com.innocentminds.helpers.LoadingIndicator>

</RelativeLayout>