<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gallery_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/greenAboutUs"
            >

            <TextView
                android:id="@+id/lblAboutUs"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/xlarge_text"
                android:text="@string/about_us"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                />

            <Button
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:layout_alignParentRight="true"
                android:gravity="center|right"
                android:layout_marginRight="@dimen/app_margin"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="@dimen/large_text"
                android:text="@string/close"
                />

            <ImageButton
                android:id="@+id/btnLogout"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/app_margin"
                android:background="@android:color/transparent"
                android:src="@drawable/logout_icon"
                android:scaleType="centerCrop"
                android:padding="20dp"
                />


        </RelativeLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:scrollbars="none"
            android:scrollbarThumbVertical="@null"
            android:scrollbarThumbHorizontal="@null">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtOverView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/app_margin"
                    android:layout_marginRight="@dimen/app_margin"
                    android:text="@string/overview"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/medium_text2" />

                <TextView
                    android:id="@+id/txtDirectorNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/app_margin"
                    android:layout_marginRight="@dimen/app_margin"
                    android:text="@string/directors_note"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/medium_text2" />

                <TextView
                    android:id="@+id/txtOurMission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/app_margin"
                    android:layout_marginRight="@dimen/app_margin"
                    android:text="@string/our_mission"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/medium_text2" />

                <TextView
                    android:id="@+id/txtOurStaff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/app_margin"
                    android:layout_marginRight="@dimen/app_margin"
                    android:text="@string/our_staff"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/medium_text2" />

            </LinearLayout>

        </HorizontalScrollView>

        <ImageView
            android:id="@+id/imgAboutUs"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:padding="15dp"
            android:src="@drawable/overview"/>

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/app_margin"
            android:paddingRight="@dimen/app_margin"
            android:textColor="@color/darkGrey"
            android:textSize="@dimen/large_text"
            android:scrollbars="vertical" />

    </LinearLayout>

    <apploads.com.innocentminds.helpers.LoadingIndicator
        android:id="@+id/indicatorView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackOpacity"
        android:visibility="invisible">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/indicator"
            android:layout_width="100dp"
            android:layout_height="100dp"
            style="@style/AVLoadingIndicatorView"
            app:indicatorName="BallScaleIndicator"
            app:indicatorColor="@color/white"
            android:layout_centerInParent="true"/>

    </apploads.com.innocentminds.helpers.LoadingIndicator>

</RelativeLayout>